my tabs fix spacing under tabs for desktop and mobile

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -956,6 +956,10 @@ label {
         padding-left: 15px;
         padding-right: 15px;
     }
+    .mobile-leftRight20 {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
     #content > div:first-child {
         margin-top: 5px;
     }
@@ -1032,6 +1036,9 @@ label {
 
     .d-top30 {
         margin-top: 30px;
+    }
+    .d-pad20 {
+        padding-top: 20px;
     }
     .d-leftRight15 {
         padding-left: 15px;
