--- a/app/styles/_lessonsIndex.scss
+++ b/app/styles/_lessonsIndex.scss
@@ -23,7 +23,6 @@
 
 @media  screen and (max-width : 1024px) {
     .padding-1 {
-        padding-top: 0;
         padding-bottom: 22px;
     }
     #content > div:first-child {
