--- a/app/styles/_reportIndex.scss
+++ b/app/styles/_reportIndex.scss
@@ -18,8 +18,8 @@
 }
 
 .margin-ri {
-    margin-top: -10px;
-    margin-bottom: 30px;
+    margin-top: 9px;
+    margin-bottom: 23px;
 }
 @media screen and (max-width:1024px) {
     .rtl {
@@ -29,7 +29,7 @@
         }
     }
     .margin-ri {
-        margin-top: 35px;
-        margin-bottom: 30px;
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
 }
